# zing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  example-audit.yml  release.yml
docs/: CI.md  METHODOLOGY.md  PUBLISHING.md
examples/: zing.yaml
prototypes/: A-console.html  B-report.html  C-wizard.html  index.html
tests/: conftest.py  test_action.py  test_agent_output.py  test_anthropic.py  test_billing.py  test_client.py  test_connectivity.py  test_context_window.py  test_embed.py  test_knowledge.py  test_media.py  test_model_identity.py  test_notify.py  test_redaction.py  test_responses.py  test_roadmap_security.py  test_scoring.py  test_security.py  test_utils.py  test_vision.py  test_watches.py  test_web.py  test_web_tools.py
zing/: __init__.py  __main__.py  cli.py  config.py  context.py  embed_audit.py  media_audit.py  models.py  notify.py  runner.py  scoring.py
zing/clients/: __init__.py  anthropic.py  base.py  openai_compatible.py  responses.py
zing/detectors/: __init__.py  base.py  billing.py  capability.py  connectivity.py  context_window.py  determinism.py  helpers.py  injected_prompt.py  integrity.py  model_identity.py  prompt_cache.py  protocol.py  quality_judge.py  reliability.py  security.py  streaming.py  vision.py
zing/judge/: __init__.py  judge.py
zing/knowledge/: __init__.py  loader.py  schema.py
zing/knowledge/data/: __init__.py  anthropic.yaml  deepseek.yaml  gemini.yaml  glm.yaml  moonshot.yaml  openai.yaml  qwen.yaml
zing/report/: __init__.py  render.py  writer.py
zing/utils/: __init__.py  redact.py  sse.py  stats.py  tokenize.py
zing/web/: __init__.py  history.py  server.py  watches.py
zing/web/static/: console.html  history.html  i18n.js  icons.js  index.html  modelpicker.js  tools.html  watches.html
