[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zing-audit"
version = "0.2.0"
description = "LLM relay reality check — a CLI that audits whether an API relay actually serves the model it claims (货不对板检测)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "zing contributors" }]
keywords = [
    "llm",
    "openai",
    "api",
    "relay",
    "proxy",
    "audit",
    "model-fingerprinting",
    "context-window",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Accurate tokenizer-based billing audit for OpenAI-family encodings.
tokenizers = ["tiktoken>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/cenbonew/zing"
Repository = "https://github.com/cenbonew/zing"
Issues = "https://github.com/cenbonew/zing/issues"

[project.scripts]
zing = "zing.cli:app"

[tool.hatch.build.targets.wheel]
# packages=["zing"] already bundles zing/knowledge/data/*.yaml (data/ is a real
# subpackage). Do NOT also force-include them — that adds a second file at the same
# archive path and aborts the wheel build.
packages = ["zing"]

[tool.hatch.build.targets.sdist]
# Ship the source the package needs; keep scratch/reference material out of the
# sdist (there is no .git here, so hatchling can't infer it from VCS).
include = [
    "/zing",
    "/tests",
    "/docs",
    "/examples",
    "/README.md",
    "/README.zh-CN.md",
    "/LICENSE",
    "/NOTICE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
